# src/controllers/personnel.controller.js
@@ -1,83 +1,131 @@
-"use strict"
+"use strict";
 /* -------------------------------------------------------
     EXPRESS - Personnel API
 ------------------------------------------------------- */
 
-const Personnel = require('../models/personnel.model')
+const Personnel = require("../models/personnel.model");
 
 module.exports = {
+  list: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "List Personnels"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
 
-    list: async (req, res) => {
+    const data = await res.getModelList(Personnel, {}, "departmentId");
 
-        const data = await res.getModelList(Personnel, {}, 'departmentId')
+    res.status(200).send({
+      error: false,
+      detail: await res.getModelListDetails(Personnel),
+      data,
+    });
+  },
 
-        res.status(200).send({
-            error: false,
-            detail: await res.getModelListDetails(Personnel),
-            data
-        })
-
-    },
-
-    create: async (req, res) => {
-
-        // isLead Control:
-        const isLead = req.body?.isLead || false
-        if (isLead) {
-            const xyz = await Personnel.updateMany({ departmentId: req.body.departmentId, isLead: true }, { isLead: false })
+  create: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Create Personnel"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                name: 'Test Personnel'
+            }
         }
+    */
 
-        const data = await Personnel.create(req.body)
+    // isLead Control:
+    const isLead = req.body?.isLead || false;
+    if (isLead) {
+      const xyz = await Personnel.updateMany(
+        { departmentId: req.body.departmentId, isLead: true },
+        { isLead: false }
+      );
+    }
 
-        res.status(201).send({
-            error: false,
-            data
-        })
+    const data = await Personnel.create(req.body);
 
-    },
+    res.status(201).send({
+      error: false,
+      data,
+    });
+  },
 
-    read: async (req, res) => {
+  read: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Get Single Personnel"
+    */
 
-        const data = await Personnel.findOne({ _id: req.params.id })
+    const data = await Personnel.findOne({ _id: req.params.id });
 
-        res.status(200).send({
-            error: false,
-            data
-        })
+    res.status(200).send({
+      error: false,
+      data,
+    });
+  },
 
-    },
-
-    update: async (req, res) => {
-
-        if (!req.user.isAdmin) {
-            req.body.isAdmin = false
-            delete req.body.isLead
-            delete req.body.salary
+  update: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Update Personnel"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                name: 'Test Personnel'
+            }
         }
+    */
 
-        // isLead Control:
-        const isLead = req.body?.isLead || false
-        if (isLead) {
-            const { departmentId } = await Personnel.findOne({ _id: req.params.id }, { departmentId: 1 })
-            await Personnel.updateMany({ departmentId, isLead: true }, { isLead: false })
-        }
+    if (!req.user.isAdmin) {
+      req.body.isAdmin = false;
+      delete req.body.isLead;
+      delete req.body.salary;
+    }
 
-        const data = await Personnel.updateOne({ _id: req.params.id }, req.body, { runValidators: true })
+    // isLead Control:
+    const isLead = req.body?.isLead || false;
+    if (isLead) {
+      const { departmentId } = await Personnel.findOne(
+        { _id: req.params.id },
+        { departmentId: 1 }
+      );
+      await Personnel.updateMany(
+        { departmentId, isLead: true },
+        { isLead: false }
+      );
+    }
 
-        res.status(202).send({
-            error: false,
-            data,
-            new: await Personnel.findOne({ _id: req.params.id })
-        })
-    },
+    const data = await Personnel.updateOne({ _id: req.params.id }, req.body, {
+      runValidators: true,
+    });
 
-    delete: async (req, res) => {
+    res.status(202).send({
+      error: false,
+      data,
+      new: await Personnel.findOne({ _id: req.params.id }),
+    });
+  },
 
-        const data = await Personnel.deleteOne({ _id: req.params.id })
+  delete: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Delete Personnel"
+    */
+    const data = await Personnel.deleteOne({ _id: req.params.id });
 
-        res.status(data.deletedCount ? 204 : 404).send({
-            error: !data.deletedCount,
-            data
-        })
-    },
-}
+    res.status(data.deletedCount ? 204 : 404).send({
+      error: !data.deletedCount,
+      data,
+    });
+  },
+};
