# swagger.json
@@ -7,7 +7,7 @@
     "termsOfService": "http://www.clarusway.com",
     "contact": {
       "name": "",
-      "email": "qadir@clarusway.com"
+      "email": "ensarsagkal@gmail.com"
     },
     "license": {
       "name": "ISC"
@@ -78,7 +78,11 @@
     },
     "/personnels/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "List Personnels",
+        "description": "  You can send query with endpoint for search[], sort[], page and limit.  <ul> Examples:  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>  <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -86,16 +90,22 @@
         }
       },
       "post": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Create Personnel",
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "departmentId": {
-                  "example": "any"
+                "name": {
+                  "type": "string",
+                  "example": "Test Personnel"
                 }
               }
             }
@@ -110,6 +120,10 @@
     },
     "/personnels/{id}": {
       "get": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Get Single Personnel",
         "description": "",
         "parameters": [
           {
@@ -126,6 +140,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
         "description": "",
         "parameters": [
           {
@@ -137,17 +155,13 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "isAdmin": {
-                  "example": "any"
-                },
-                "req": {
-                  "example": "any"
-                },
-                "salary": {
-                  "example": "any"
+                "name": {
+                  "type": "string",
+                  "example": "Test Personnel"
                 }
               }
             }
@@ -160,6 +174,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Delete Personnel",
         "description": "",
         "parameters": [
           {
@@ -179,6 +197,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "Update Personnel",
         "description": "",
         "parameters": [
           {
@@ -190,17 +212,13 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "isAdmin": {
-                  "example": "any"
-                },
-                "req": {
-                  "example": "any"
-                },
-                "salary": {
-                  "example": "any"
+                "name": {
+                  "type": "string",
+                  "example": "Test Personnel"
                 }
               }
             }
@@ -684,7 +702,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1711118077995
+              "example": 1711205350826
             }
           }
         }
